# deck_scaler_rts

./: CHANGELOG.md  Cargo.toml  rustfmt.toml
.github/workflows/: release.yaml
.zed/: tasks.json
src/: assets.rs  camera.rs  common.rs  debug.rs  gameplay.rs  infrastructure.rs  input.rs  main.rs  prelude.rs  third_party.rs  utils.rs  view.rs
src/common/: destroy_after.rs  movement.rs  picking.rs
src/common/destroy_after/feature/: components.rs  systems.rs
src/common/movement/: feature.rs
src/common/movement/feature/: components.rs  systems.rs
src/common/picking/feature/: components.rs  systems.rs
src/gameplay/: affect.rs  level.rs  unit.rs
src/gameplay/affect/: block_damage.rs  deal_damage.rs  feature.rs  types.rs
src/gameplay/affect/deal_damage/: feature.rs
src/gameplay/affect/feature/: commands.rs  components.rs  systems.rs
src/gameplay/level/feature/: systems.rs
src/gameplay/unit/: attack.rs  auto_mode.rs  behaviour_state.rs  defense.rs  health.rs  lead.rs  movement.rs  opponent.rs  selection.rs  side.rs  sparkle.rs  spawn.rs  stats.rs  status.rs  suit.rs  trigger.rs  unit_orders.rs  view.rs
src/gameplay/unit/auto_mode/: auto_attack.rs
src/gameplay/unit/behaviour_state/: state_change.rs
src/gameplay/unit/feature/: components.rs  (+1 more)
src/infrastructure/: app_state.rs  order.rs
src/input/: bindings.rs  camera_movement.rs  movement.rs  unit_control.rs
src/input/feature/: components.rs  systems.rs
src/utils/: extensions.rs
src/utils/extensions/: number_extensions.rs  transform_extensions.rs
src/view/feature/: components.rs  systems.rs
(+61 files in other folders)
