[package]
name = "deck_scaler_rts"
version = "0.0.19"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.15"
tiny_bail = "0.4"
bevy_asset_loader = { version = "0.22", features = ["2d"] }
bevy-inspector-egui = "0.28"
bevy_tween = "0.7"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
