[package]
name = "deck_scaler_rts"
version = "0.0.21"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

[features]
dev = [
    "bevy/dynamic_linking",
]

[dependencies]
bevy = { version = "0.15" }
tiny_bail = "0.4"
bevy_asset_loader = { version = "0.22", features = ["2d"] }
bevy-inspector-egui = "0.29"
bevy_tween = "0.7"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
